--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -27,6 +27,9 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
     compileSdkVersion flutter.compileSdkVersion
+    defaultConfig {
+        minSdkVersion 20
+    }
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
